--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@loadable/component": "^5.15.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
