--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "leaflet": "^1.7.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.1",
     "react-on-rails": "12.3.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
