--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
     "@loadable/component": "^5.15.0",
+    "@mapbox/geo-viewport": "^0.4.1",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "leaflet": "^1.7.1",
+    "deck.gl": "^8.5.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.1",
+    "react-map-gl": "^6.1.16",
     "react-on-rails": "12.3.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "worker-loader": "^3.0.8"
   },
   "version": "0.1.0",
   "devDependencies": {
