--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
     "lint": "yarn lint app/assets-webpacker/**/* --ext .jsx --ext .js"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.8",
     "@babel/preset-react": "^7.14.5",
     "@loadable/component": "^5.15.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "graphql": "^15.5.1",
     "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-on-rails": "12.3.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
