--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@apollo/client": "^3.4.8",
     "@babel/preset-react": "^7.14.5",
     "@loadable/component": "^5.15.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -16,6 +18,7 @@
     "leaflet.markercluster": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-apollo-network-status": "^5.0.1",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
     "react-leaflet-markercluster": "^3.0.0-rc1",
