--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-leaflet": "^3.2.1",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-on-rails": "12.3.0",
+    "react-router-dom": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
