--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-apollo-network-status": "^5.0.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-leaflet": "^3.2.1",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-on-rails": "12.3.0",
