use postgresql db and minor racecar config update

--- a/config/racecar.yml
+++ b/config/racecar.yml
@@ -10,7 +10,7 @@ common: &common
 
 development:
   <<: *common
-  group_id: "connect-1-development-#{`hostname`}"
+  group_id: "connect-1-development-#{`hostname`}-heroku-01"
 
 test:
   <<: *common
