--- a/package.json
+++ b/package.json
@@ -5,21 +5,29 @@
     "lint": "yarn lint app/assets-webpacker/**/* --ext .jsx --ext .js"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.8",
     "@babel/preset-react": "^7.14.5",
     "@loadable/component": "^5.15.0",
-    "@mapbox/geo-viewport": "^0.4.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "deck.gl": "^8.5.4",
+    "graphql": "^15.5.1",
+    "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-apollo-network-status": "^5.0.1",
     "react-dom": "^17.0.2",
-    "react-map-gl": "^6.1.16",
+    "react-helmet": "^6.1.0",
+    "react-leaflet": "^3.2.1",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-on-rails": "12.3.0",
+    "react-router-dom": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "worker-loader": "^3.0.8"
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
