--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - master
-      - main
 
 jobs:
   build:
@@ -15,11 +14,10 @@ jobs:
       env:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
         HEROKU_APP_NAME: "guarded-ravine-21780"
-      if: github.ref == 'refs/heads/main' && job.status == 'success'
-      run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
-
-    - name: Run DB migrations on deployed Heroku app
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_TOKEN }}
-      if: github.ref == 'refs/heads/main' && job.status == 'success'
-      run: heroku run -a guarded-ravine-21780 rake db:migrate
+      if: github.ref == 'refs/heads/master' && job.status == 'success'
+      run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/master:master
+    # - name: Run DB migrations on deployed Heroku app
+    #   env:
+    #     HEROKU_API_KEY: ${{ secrets.HEROKU_API_TOKEN }}
+    #   if: github.ref == 'refs/heads/main' && job.status == 'success'
+    #   run: heroku run -a guarded-ravine-21780 rake db:migrate
